fix: compiled css was too big

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,9 +1,3 @@
-@import "~@angular/material/theming";
-
-@include mat-core();
-
-$primary: mat-palette($mat-grey);
-
 :host {
   width: 100%;
   height: 4.5rem;
@@ -13,7 +7,7 @@ footer {
   position: absolute;
   bottom: 0;
   height: 4.5rem;
-  background-color: mat-color($primary, 300);
+  background-color: rgb(212, 212, 212);
   width: 100%;
   display: flex;
   flex-direction: column;
